--- a/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
+++ b/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
@@ -236,6 +236,12 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
 +++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
++++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
 +++
@@ -391,6 +397,12 @@ Set proxy options for connections via CONNECT proxy (e.g. Squid) or a SOCKS prox
 +++
 |[[ssl]]`@ssl`|`Boolean`|+++
 
++++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
 +++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 
@@ -1043,6 +1055,12 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
 +++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
++++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
 +++
@@ -1445,6 +1463,12 @@ Set whether SO_linger keep alive is enabled
 +++
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
++++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
 +++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
@@ -2040,6 +2064,12 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
 +++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
++++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
 +++
@@ -2314,8 +2344,40 @@ Set the last stream id.
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
+|[[graphiQLOptions]]`@graphiQLOptions`|`link:dataobjects.html#GraphiQLOptions[GraphiQLOptions]`|+++
+Configure the GraphiQL development tool.
++++
 |[[requestBatchingEnabled]]`@requestBatchingEnabled`|`Boolean`|+++
 Whether request batching should be enabled. Defaults to <code>false</code>.
++++
+|===
+
+[[GraphiQLOptions]]
+== GraphiQLOptions
+
+++++
+ Embedded GraphiQL user interface options.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[enabled]]`@enabled`|`Boolean`|+++
+Whether the GraphiQL development tool should be enabled. Defaults to <code>false</code>.
++++
+|[[graphQLUri]]`@graphQLUri`|`String`|+++
+Set the GraphQL endpoint URI. Defaults to the path used to get the GraphiQL user interface.
++++
+|[[headers]]`@headers`|`String`|+++
+A fixed set of HTTP headers to add to GraphiQL requests. Defaults to <code>null</code>.
++++
+|[[query]]`@query`|`String`|+++
+Initial value of the query area in the GraphiQL user interface. Defaults to <code>null</code>.
++++
+|[[variables]]`@variables`|`Json object`|+++
+Initial value of the variables area in the GraphiQL user interface. Defaults to <code>null</code>.
 +++
 |===
 
@@ -2576,6 +2638,12 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
 +++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
++++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
 +++
@@ -2831,6 +2899,12 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
 +++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
++++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
 +++
@@ -3057,6 +3131,12 @@ Configure the SockJS path, the default value is <code>/term/*</code>.
 +++
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
++++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
 +++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
@@ -4162,6 +4242,12 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
 +++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
++++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
 +++
@@ -4308,6 +4394,12 @@ Set whether SO_linger keep alive is enabled
 +++
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
++++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
 +++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
@@ -4467,6 +4559,12 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
 +++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
++++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
 +++
@@ -4589,6 +4687,12 @@ Set whether SO_linger keep alive is enabled
 +++
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
++++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
 +++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
@@ -5012,6 +5116,12 @@ Set whether SO_linger keep alive is enabled
 +++
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
++++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
 +++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
@@ -6054,6 +6164,12 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
 +++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
++++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
 +++
@@ -6139,6 +6255,9 @@ Replace the current list of reporters with a new one.
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
+|[[headers]]`@headers`|`String`|+++
+Add a request header.
++++
 |[[host]]`@host`|`String`|+++
 Set the host name to be used by the client request.
 +++
@@ -6860,6 +6979,12 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
 +++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
++++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
 +++
@@ -7024,6 +7149,12 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
 +++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
++++
 |[[supportedVersions]]`@supportedVersions`|`Array of String`|+++
 Sets the STOMP protocol versions supported by the server. Versions must be given in the decreasing order.
 +++
@@ -7169,6 +7300,12 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
 +++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
++++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
 +++
@@ -7302,6 +7439,12 @@ Set whether SO_linger keep alive is enabled
 +++
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
++++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
 +++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
@@ -7984,6 +8127,12 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`@ssl`|`Boolean`|+++
 Set whether SSL/TLS is enabled
 +++
+|[[sslHandshakeTimeout]]`@sslHandshakeTimeout`|`Number (long)`|+++
+Set the SSL handshake timeout, default time unit is seconds.
++++
+|[[sslHandshakeTimeoutUnit]]`@sslHandshakeTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the SSL handshake timeout unit. If not specified, default is seconds.
++++
 |[[tcpCork]]`@tcpCork`|`Boolean`|+++
 Enable the <code>TCP_CORK</code> option - only with linux native transport.
 +++
@@ -8045,6 +8194,41 @@ Set the Websocket deflate compression level.
 |[[websocketCompressionRequestServerNoContext]]`@websocketCompressionRequestServerNoContext`|`Boolean`|+++
 Set whether the <code>server_no_context_takeover</code> parameter of the WebSocket per-message
  deflate compression extension will be offered.
++++
+|===
+
+[[WebSocketConnectOptions]]
+== WebSocketConnectOptions
+
+++++
+ Options describing how an link connect a link.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[headers]]`@headers`|`String`|+++
+Add a request header.
++++
+|[[host]]`@host`|`String`|+++
+Set the host name to be used by the client request.
++++
+|[[port]]`@port`|`Number (int)`|+++
+Set the port to be used by the client request.
++++
+|[[ssl]]`@ssl`|`Boolean`|+++
+Set whether SSL/TLS is enabled
++++
+|[[subProtocols]]`@subProtocols`|`Array of String`|+++
+Set the WebSocket sub protocols to use.
++++
+|[[uri]]`@uri`|`String`|+++
+Set the request relative URI
++++
+|[[version]]`@version`|`link:enums.html#WebsocketVersion[WebsocketVersion]`|+++
+Set the WebSocket version.
 +++
 |===
 
